--- a/CPWS.EcoSystem/CPWS.EcoSystem.csproj
+++ b/CPWS.EcoSystem/CPWS.EcoSystem.csproj
@@ -1,13 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <Configurations>Debug;Release;Release - NoGPU</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="Life\Animals\" />
     <Folder Include="Life\Plants\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="CP.Common">
+      <HintPath>..\..\..\..\..\Desktop\CP Repos\netstandard2.1\CP.Common.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
