--- a/CPWS.EcoSystem/CPWS.EcoSystem.csproj
+++ b/CPWS.EcoSystem/CPWS.EcoSystem.csproj
@@ -11,6 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CPWS.CUDACLI\CPWS.CUDACLI.vcxproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="CP.Common">
       <HintPath>..\..\..\..\..\Desktop\CP Repos\netstandard2.1\CP.Common.dll</HintPath>
     </Reference>
