--- a/CPWS.WorldGenerator/CPWS.WorldGenerator.csproj
+++ b/CPWS.WorldGenerator/CPWS.WorldGenerator.csproj
@@ -28,4 +28,8 @@
     <Folder Include="Utils\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
+  </ItemGroup>
+
 </Project>
