--- a/WorldGenerator.VisualTests/WorldGenerator.VisualTests.csproj
+++ b/WorldGenerator.VisualTests/WorldGenerator.VisualTests.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <Platforms>AnyCPU;x86</Platforms>
   </PropertyGroup>
