--- a/CPWS.WorldGenerator/CPWS.WorldGenerator.csproj
+++ b/CPWS.WorldGenerator/CPWS.WorldGenerator.csproj
@@ -19,17 +19,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="CP.Common">
-      <HintPath>..\..\..\..\..\Desktop\CP Repos\netstandard2.0\CP.Common.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-
-  <ItemGroup>
     <Folder Include="Utils\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="CP.Common">
+      <HintPath>..\..\CPLibrary\CP.Common\bin\Release\netstandard2.0\CP.Common.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
